# sigourney

./: .gitattributes  .gitignore  README.md  dictionary.ml  dune  index.html  queue.ml  sigourney.bc.js  sigourney.ml
src/: dictionary.ml  dune  dune-project  queue.ml  sigourney.ml  sigourney.opam  test.ml  traversal.ml  wordgraph.ml
